[package]
name = "validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "validator"
path = "src/lib.rs"


[profile.test]
opt-level=3

[profile.bench]
opt-level=3

[dependencies]
secp256k1 = {version = "0.22.1", features = ["global-context", "rand-std", "bitcoin_hashes", "serde"]}
sha256 = "1.0.2"
evmap = "10.0.2"
left-right = "0.11.4"
uuid = "1.0.0"
rand = "0.8.5"
serde_json = "1.0.64"
serde = { version = "1.0.101", features = ["derive"] }
crossbeam-channel = "0.5.4"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benches"
harness = false 